# cv

./: .gitattributes  .gitignore  .gitlab-ci.yaml  .gitlab-ci.yml  README.md  launch.sh  pyproject.toml  requirements-jetson.txt  send_fake_targets.sh  settings.toml  test_camera.sh
common/: README.md  pyproject.toml  requirements.txt
common/config/: settings.toml
common/polystar/common/: constants.py  dependency_injection.py  settings.py
common/polystar/common/communication/: file_descriptor_target_sender.py  target_sender_abc.py  usb_target_sender.py
common/polystar/common/filters/: exclude_filter.py  filter_abc.py  intersection_filter.py  pass_through_filter.py  union_filter.py
common/polystar/common/frame_generators/: camera_frame_generator.py  cv2_frame_generator_abc.py  fps_video_frame_generator.py  frames_generator_abc.py  video_frame_generator.py
common/polystar/common/image_pipeline/: classifier_image_pipeline.py  image_pipeline.py
common/polystar/common/models/: box.py  camera.py  image.py  image_annotation.py  label_map.py  object.py  target_abc.py  trt_model.py
common/polystar/common/pipeline/: debug_pipeline.py  pipe_abc.py  pipeline.py
common/polystar/common/target_pipeline/: debug_pipeline.py  pipeline.py  target_pipeline.py
common/polystar/common/utils/: dataframe.py  git.py  iterable_utils.py  markdown.py  named_mixin.py  no_case_enum.py  tensorflow.py  tqdm.py  video_frame_generator.py
common/polystar/common/view/: bend_object_on_image.py  blend_object_on_image.py  blend_text_on_image.py  cv2_results_viewer.py  display_image_annotation.py  display_object_on_image.py  json_factory.py  object_json_factory.py  plt_display_image_with_object.py  plt_results_viewer.py  results_viewer_abc.py
common/research/: constants.py
common/research/common/: constants.py
common/research/common/dataset/: directory_roco_dataset.py  roco_dataset.py  roco_dataset_descriptor.py  split.py  split_dataset.py  tensorflow_record.py  union_dataset.py  upload.py
common/research/common/datasets/: capped_dataset.py  dataset.py  dataset_builder.py  filtered_dataset.py  image_dataset.py  image_file_dataset_builder.py  simple_dataset.py  slice_dataset.py  transform_dataset.py  union_dataset.py
common/research/common/datasets_v3/: capped_dataset.py  dataset.py  dataset_builder.py  filter_dataset.py  image_dataset.py  image_file_dataset_builder.py  iterator_dataset.py  lazy_dataset.py  transform_dataset.py  union_dataset.py
common/research/common/gcloud/: gcloud_storage.py
common/research/common/image_pipeline_evaluation/: image_dataset_generator.py  image_pipeline_evaluation_reporter.py  image_pipeline_evaluator.py
common/research/common/scripts/: construct_twith_datasets_from_manual_annotation.py  create_tensorflow_records.py  improve_roco_by_zooming.py  train_val_test_split.py  visualize_dataset.py
common/research/dataset/twitch/: NewVision.py  is_robot_view.py  make_thumbnails.py  mask_detector.py  new_vision.py  robot_view.py  robots_views_extractor.py  video_frame_generator.py
common/research/scripts/: extract_robots_views_from_video.py  monitor_new_twitch_frames.py  split_video.py
common/research_common/: __init__.py  constants.py  tensorflow_utils.py
common/research_common/dataset/: dataset.py  directory_roco_dataset.py  roco_dataset.py  roco_dataset_descriptor.py  split.py  split_dataset.py  tensorflow_record.py  union_dataset.py
common/research_common/dataset/dji/: dji_roco_datasets.py  dji_roco_zoomed_datasets.py
common/research_common/dataset/improvement/: zoom.py
common/research_common/dataset/roco/: roco_datasets.py
common/research_common/dataset/twitch/: aerial_view_detector.py  mask_detector.py  robots_views_extractor.py  twitch_roco_datasets.py
common/research_common/image_pipeline_evaluation/: image_dataset_generator.py  image_pipeline_evaluation_reporter.py  image_pipeline_evaluator.py
common/research_common/scripts/: construct_dataset_from_manual_annotation.py  construct_twith_datasets_from_manual_annotation.py  correct_annotations.py  correct_armor_annotations.py  create_tensorflow_records.py  extract_robots_views_from_video.py  improve_roco_by_zooming.py  make_twitch_chunks_to_annotate.py  move_aerial_views.py  train_val_test_split.py  visualize_dataset.py
common/tests/unittests/object_validators/: test_in_box_validator.py
drone-at-base/: Readme.md  pyproject.toml
drone-at-base/polystar/drone_at_base/: globals.py
models-training/: install_tensorflow_models.sh  pyproject.toml
robots-at-robots/: Readme.md  pyproject.toml
robots-at-robots/config/: settings.toml
robots-at-robots/polystar/robots_at_robots/: dependency_injection.py  globals.py
robots-at-robots/polystar/robots_at_robots/scripts/: demo_infer.py  demo_pipeline.py
robots-at-robots/research/armor_color/: armor_color_pipeline_reporter_factory.py  baseline_experiments.py
robots-at-robots/research/armor_digit/: armor_digit_pipeline_reporter_factory.py  baseline_experiments.py
robots-at-robots/research/dataset/: armor_color_dataset_factory.py  armor_dataset_factory.py  armor_digit_dataset_factory.py  armor_image_dataset_factory.py
robots-at-robots/research/demos/: demo_infer.py  demo_pipeline.py  demo_pipeline_camera.py  utils.py
robots-at-robots/research/robots_at_robots/armor_color/: armor_color_benchmarker.py  armor_color_dataset.py  armor_color_pipeline_reporter_factory.py  baseline_experiments.py  benchmark.py
robots-at-robots/research/robots_at_robots/armor_digit/: armor_digit_benchmarker.py  armor_digit_dataset.py  armor_digit_pipeline_reporter_factory.py  baseline_experiments.py  benchmark.py  clean_dataset.py  clean_datasets.py
robots-at-robots/research/robots_at_robots/dataset/: armor_color_dataset_factory.py  armor_value_dataset.py  (+8 more)
robots-at-runes/: Readme.md  pyproject.toml
robots-at-runes/polystar/robots_at_runes/: globals.py
robots-at-runes/research/: constants.py  superposition.py
robots-at-runes/research/dataset/: dataset_generator.py  labeled_image.py  labels.xml
robots-at-runes/research/robots_at_runes/: constants.py
(+591 files in other folders)
