[tool.poetry]
name = "polystar.cv"
version = "0.2.0"
description = "CV code for Polystar's RoboMaster team"
authors = ["Polystar"]

[tool.poetry.dependencies]
python = "^3.6"
dynaconf = "^2.2.2"
injector = "^0.18.3"
numpy = "1.18.x"
ffmpeg-python = "^0.2.0"
scikit-image = "^0.16.2"
tqdm = "^4.42.1"
lxml = "^4.5.0"
nptyping = "^0.3.1"
xmltodict = "^0.12.0"
dicttoxml = "^1.7.4"
seaborn = "^0.10.0"
tabulate = "^0.8.6"
scikit-learn = "^0.22.2"
memoized-property = "^1.0.3"
dataclasses = "^0.6.0"
imutils = "^0.5.3"
more-itertools = "^8.4.0"

[tool.poetry.dev-dependencies]
tensorflow = "2.1.x"
tensorflow-estimator = "2.1.x"
opencv-python = "4.1.x"
matplotlib = "^3.1.3"

[tool.black]
line-length = 120
target_version = ['py36']

[tool.isort]
profile='black'
line_length = 120
known_first_party = ['polystar','tests','research','tools','scripts']
skip = ['.eggs','.git','.hg','.mypy_cache','.nox','.pants.d','.tox','.venv','_build','buck-out','build','dist','node_modules','venv','__init__.py']
