[tool.poetry]
name = "src"
version = "0.2.0"
description = "CV code for Polystar's RoboMaster team"
authors = ["Polystar"]
packages = [{ include = "polystar", from = "src" }, { include = "research", from = "src" }]
include = ["**/.changes"]

[tool.poetry.dependencies]
python = "^3.6"
dynaconf = "^2.2.2"
injector = "^0.18.3"
numpy = "1.18.x"
ffmpeg-python = "^0.2.0"
scikit-image = "^0.16.2"
tqdm = "^4.42.1"
lxml = "^4.5.0"
nptyping = "^0.3.1"
xmltodict = "^0.12.0"
dicttoxml = "^1.7.4"
seaborn = "^0.10.0"
tabulate = "^0.8.6"
scikit-learn = "^0.22.2"
memoized-property = "^1.0.3"
dataclasses = "^0.6.0"
imutils = "^0.5.3"
more-itertools = "^8.4.0"

opencv-python = "4.1.x"
matplotlib = "^3.1.3"
markdown = "^3.3.3"
xhtml2pdf = "^0.2.5"
google-cloud-storage = "^1.35.0"
pyyaml = "^5.3.1"
six = "1.15.0"  # https://github.com/googleapis/python-bigquery/issues/70

[tool.poetry.dev-dependencies]
tensorflow = "1.14.x"
tensorflow-estimator = "1.14.x"
h5py = "<3.0.0"
kivy = "^1.11.1"
cloudml-hypertune = "^0.1.0-alpha.6"
google-api-python-client = "^1.12.8"
wheel = "^0.36.2"
optuna = "^2.3.0"
hyperopt = "^0.2.5"
plotly = "^4.14.1"
pydot = "^1.4.1"

[tool.black]
line-length = 120
target_version = ['py36']

[tool.isort]
profile='black'
line_length = 120
known_first_party = ['polystar','tests','research','tools','scripts']
skip = ['.eggs','.git','.hg','.mypy_cache','.nox','.pants.d','.tox','.venv','_build','buck-out','build','dist','node_modules','venv','__init__.py']

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
