[tool.poetry]
name = "polystar.common"
version = "0.1.0"
description = "Common code for Polystar"
authors = ["Polystar"]
packages = [{ include = "polystar" }]

[tool.poetry.dependencies]
python = "^3.7"
tensorflow = "^2.1.0"
dynaconf = "^2.2.2"
opencv-python = "^4.2.0"
injector = "^0.18.3"
numpy = "^1.18.1"
matplotlib = "^3.1.3"

[tool.poetry.dev-dependencies]
pytest = "^4.5"
scikit-image = "^0.16.2"
tqdm = "^4.42.1"
lxml = "^4.5.0"
ffmpeg-python = "^0.2.0"

[tool.black]
line-length = 120
target_version = ['py37']
