[tool.poetry]
name = "polystar.models-training"
version = "0.1.0"
description = ""
authors = ["Polystar"]
packages = [{ include = "polystar" }]

[tool.poetry.dependencies]
python = "3.6"
tensorflow-gpu = { version = "1.12.x", platform = "linux/win32" }
tensorflow = { version = "1.12.x", platform = "darwin" }
matplotlib = "^3.1.3"
PILLOW = "^7.0.0"
Cython = "^0.29.15"
pycocotools = "^2.0.0"

[tool.poetry.dev-dependencies]
pytest = "^4.5"

[tool.black]
line-length = 120
target_version = ['py36']
