[tool.poetry]
name = "polystar.robots-at-robots"
version = "0.1.0"
description = "Code to target robots from our robots"
authors = ["Polystar"]
packages = [{ include = "polystar" }]

[tool.poetry.dependencies]
python = "^3.7"
"polystar.common" = {path = "../common"}

[tool.poetry.dev-dependencies]
pytest = "^4.5"
