[tool.poetry]
name = "polystar.robots-at-robots"
version = "0.1.0"
description = "Code to target robots from our robots"
authors = ["Polystar"]
packages = [{ include = "polystar" }]

[tool.poetry.dependencies]
python = "^3.6"
"polystar.common" = {path = "../common"}

[tool.poetry.dev-dependencies]
tensorflow = "2.1.x"
tensorflow-estimator = "2.1.x"

[tool.black]
line-length = 120
target_version = ['py36']
